--- a/code/7.call和apply/test.html
+++ b/code/7.call和apply/test.html
@@ -5,7 +5,8 @@
     <title>call和apply</title>
 </head>
 <body>
-
+<!--这是在听歌的时候突然发现的一个很有意思的音乐播放插件-->
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=3&id=2059240217&auto=1&height=66"></iframe>
 </body>
 <script src="test.js"></script>
 </html>
